--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "wav-blob-util": "^1.0.21",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
